Add comment count use case and api done